# sem6-miniPwith-withdaBOIS-

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  api.py  evaluate.py  pyproject.toml  requirements.txt  setup.sh  train.py
.github/workflows/: quality.yml
docs/: BASELINE.md  METHODOLOGY.md  MODEL_ROADMAP.md  POSTPROCESSING.md
docs/medical-device/: CLINICAL_EVALUATION.md  CODEBASE_AUDIT.md  CYBERSECURITY.md  DEPLOYMENT_AND_OPERATIONS.md  DOCUMENT_INDEX.csv  EXECUTION_WORKSTREAMS.json  IMPLEMENTATION_PLAN.md  INTENDED_USE.md  POSTMARKET.md  PRIORITY_STATUS.md  QMS_AND_REGULATORY.md  README.md  RELEASE_READINESS.json  RISK_REGISTER.csv  SOFTWARE_REQUIREMENTS.md  TRACEABILITY.csv  VERIFICATION_AND_VALIDATION.md
docs/medical-device/governance/: DECISION_REGISTER.csv  GOVERNANCE_AND_PRODUCT_DEFINITION.md
docs/medical-device/human-factors/: HUMAN_FACTORS_AND_LABELING.md  TASK_USE_ERROR_ANALYSIS.csv  USABILITY_EXECUTION.md  USER_COMPETENCY_REGISTER.csv
docs/medical-device/model-data/: CLINICAL_STUDY_REGISTER.csv  DATASET_INTAKE_REGISTER.csv  DATA_LICENSE_REGISTER.csv  EVALUATION_MANIFEST.template.csv  FROZEN_MODEL_CARD.template.json  METRIC_DEFINITIONS.md  MODEL_DATA_EVIDENCE_PLAN.md  MODEL_DEVELOPMENT_EXECUTION.md  PERFORMANCE_VALIDATION_PROTOCOL.md  REPEATABILITY_INPUT.template.csv  RESEARCH_EVIDENCE_SNAPSHOT.json  STATISTICAL_ANALYSIS_PLAN.md  SUBGROUP_AND_FAILURE_TAXONOMY.csv  UNCERTAINTY_CALIBRATION.template.csv  UNCERTAINTY_EVALUATION.template.csv
docs/medical-device/operations/: DAILY_SAFETY_CHECKLIST.csv  PROFESSIONAL_USE_RUNBOOK.md
docs/medical-device/postmarket/: POSTMARKET_EVENT_REGISTER.csv  POSTMARKET_EXECUTION.md  POSTMARKET_OPERATIONS.md  SIGNAL_REGISTER.csv
docs/results/: baseline_dataset_manifest.json  baseline_dataset_provenance.json  baseline_fold3_per_image.csv  baseline_fold3_summary.json  baseline_training_metrics.csv  e01_postprocessing_validation.json
scripts/: __init__.py  analyze_repeatability.py  benchmark_topology.py  build_model_evidence.py  evaluate_clinical_predictions.py  evaluate_uncertainty.py  generate_sbom.py  load_test.py  prepare_pannuke.py  qualify_deployment.py  release_gate.py  tune_postprocessing.py  validate_dataset.py  validate_medical_evidence.py
src/: __init__.py  analysis_service.py  clinical_evaluation.py  config.py  http_limits.py  input_validation.py  provenance.py  repeatability.py  reporting.py  runtime.py  uncertainty.py
src/inference/: __init__.py  postprocessing.py  predictor.py
src/models/: __init__.py  attn_dist_unet.py  factory.py
src/preprocessing/: __init__.py  dataset.py  instances.py  transforms.py
src/training/: __init__.py  data.py  trainer.py
src/utils/: __init__.py  losses.py  metrics.py
tests/: __init__.py  test_api.py  test_baselines.py  test_build_model_evidence.py  test_clinical_evaluation.py  test_dataset.py  test_generate_sbom.py  test_http_limits.py  test_inference.py  test_input_validation.py  test_load_test.py  test_losses.py  test_metrics.py  test_model.py  test_provenance.py  test_qualify_deployment.py  test_release_gate.py  test_repeatability.py  test_reporting.py  test_runtime.py  test_splits.py  test_trainer.py  test_tuning.py  test_uncertainty_and_topology.py  test_validate_medical_evidence.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
(+28 files in other folders)
