[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "attn-dist-net"
version = "1.0.0"
description = "Attention-guided distance-map learning for nuclei instance segmentation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
  {name = "Fayaz Saju"},
  {name = "Aurora Sabu Rangan"},
  {name = "Alan Joseph"},
]
dependencies = [
  "albumentations>=2.0.8,<2.1",
  "fastapi>=0.125,<0.140",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.9,<5",
  "pillow>=10,<12",
  "pydantic>=2.12,<3",
  "python-multipart>=0.0.12,<1",
  "scipy>=1.12,<2",
  "scikit-image>=0.22,<1",
  "segmentation-models-pytorch>=0.3.3,<1",
  "tensorboard>=2.16,<3",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "tqdm>=4.66,<5",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
data = ["datasets>=3,<5"]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.9,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.4,<1",
]

[tool.setuptools]
packages = [
  "scripts",
  "src",
  "src.inference",
  "src.models",
  "src.preprocessing",
  "src.training",
  "src.utils",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
