[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "attn-dist-net"
version = "1.0.0"
description = "Attention-guided distance-map learning for nuclei instance segmentation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
  {name = "Fayaz Saju"},
  {name = "Aurora Sabu Rangan"},
  {name = "Alan Joseph"},
]
dependencies = [
  "fastapi>=0.139,<0.140",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.9,<5",
  "pillow>=12.3,<13",
  "pydantic>=2.12,<3",
  "python-multipart>=0.0.12,<1",
  "scipy>=1.12,<2",
  "scikit-image>=0.22,<1",
  "segmentation-models-pytorch>=0.3.3,<1",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "uvicorn>=0.30,<1",
  "starlette>=1.3.1,<1.4",
]

[project.optional-dependencies]
data = ["datasets>=3,<5"]
train = [
  "albumentations>=2.0.8,<2.1",
  "tensorboard>=2.16,<3",
  "tqdm>=4.66,<5",
]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.9,<2",
  "pip-audit>=2.10.1,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.4,<1",
]

[tool.setuptools]
packages = [
  "src",
  "src.inference",
  "src.models",
  "src.preprocessing",
  "src.training",
  "src.utils",
]

[tool.uv.sources]
torch = [{index = "pytorch-cpu", marker = "sys_platform == 'linux'"}]
torchvision = [{index = "pytorch-cpu", marker = "sys_platform == 'linux'"}]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
